@@ -1,5 +1,9 @@
 .data
 .global UpdatePlayer, PlayerHit
+
+.align 3
+RESPAWN:
+    .hword(0)
 .text
 # 
 # Playerlogic
@@ -13,6 +17,47 @@ UpdatePlayer:
 	ldw r8, 0(r9)
 	movia r9, INPUT_STATE
 	ldh r9, 0(r9)
+
+    # Update the respawn
+    movia r10, RESPAWN
+    ldh r11, 0(r10)
+    beq r11, r0, CHECK_FIRE
+    
+    # Otherwise we're waiting to respawn, decrement
+    subi r11, r11, 1
+    stw r11, 0(r11)
+
+    # If its equal to zero, reset self, otherwise draw explosion set
+    beq r11, r0, RESET
+
+	movia r4, PLAYER_STATE
+
+    # Depending on respawn number, set to different sprite
+    srli r12, r11, 4
+    andi r12, r12, 0x1
+    movia r13, 128
+    mul r12, r12, r13
+	movia r5, PLAYER_SPRITE_RESPAWN
+    add r5, r12
+
+	movia r6, GREEN
+	call drawing_draw_bitmap
+
+    br PLAYER_DONE
+
+RESET:
+    # If life is zero restart game
+    ldh r10, 4(r9)
+    srli r10, r10 r16
+    bgt r10, r0, REG_RESET
+    call RestartGame
+    br PLAYER_DONE
+
+REG_RESET:
+    # Reset player position and life
+	movia r10, 0x00d00098
+    stw r10, 0(r9)
+
 
 CHECK_FIRE:
 	# Check for pending fire
@@ -43,7 +88,7 @@ CHECK_MOVEMENT:
 	bne r10, r0, MOVE_LEFT
 	andi r10, r9, RIGHT_ARROW_KEY
 	bne r10, r0, MOVE_RIGHT
-	br PLAYER_DONE
+	br PLAYER_APPLY
 
 MOVE_LEFT:
 	# Calculate new position
@@ -72,9 +117,9 @@ MOVE_APPLY:
   and r8, r8, r10
 	andi r9, r9, 0xFFFF
 	or r8, r8, r9
-	br PLAYER_DONE
+	br PLAYER_APPLY
 
-PLAYER_DONE:
+PLAYER_APPLY
 	# Apply new player state
 	movia r9, PLAYER_STATE
 	stw r8, 0(r9)
@@ -85,6 +130,7 @@ PLAYER_DONE:
 	movia r6, GREEN
 	call drawing_draw_bitmap
 
+PLAYER_DONE:
 	ldw ra, 0(sp)
 	addi sp, sp, 4
 	ret
@@ -96,19 +142,26 @@ PlayerHit:
 	addi sp, sp, -4
 	stw ra, 0(sp)
 
-  movia r9, PLAYER_STATE
-  ldw r8, 8(r9)
-  srli r10, r8, 16 # r10 has life now
+    # If were respawning don't take off more life
+    movia r10, RESPAWN
+    ldh r10, 0(r10)
+    bgt r10, r0, PLAYER_HIT_DONE
 
-  addi r10, r10, -1
+    movia r9, PLAYER_STATE
+    ldw r8, 8(r9)
+    srli r10, r8, 16 # r10 has life now
 
-  bgt r10, r0, PLAYER_LOSE_LIFE
-  # No more life
-  call RestartGame
-	br PLAYER_HIT_DONE
+    # If its already zero quit
+    beq r10, r10, PLAYER_HIT_DONE
+
+    # Set the respawn
+    movia r10, 0x78
+    movia r11, RESPAWN
+    stw r10, 0(r11)
 
 PLAYER_LOSE_LIFE:
 	# Apply the loss of life
+    addi r10, r10, -1
 	slli r10, r10, 16
 	movia r11, 0x0000FFFF
 	and r8, r8, r11
